推进复习，结束17章